KAS-4241 Replace auk-form & auk-form-group instances (part 3)

--- a/app/components/publications/documents/reference-document-upload-modal.hbs
+++ b/app/components/publications/documents/reference-document-upload-modal.hbs
@@ -17,6 +17,7 @@
       @pieces={{this.uploadedPieces}}
       @setReceivedDate={{this.setReceivedDate}}
       @onDeletePiece={{perform this.deleteUploadedPiece}}
+      class="au-u-margin-top-tiny"
     />
   </Auk::Modal::Body>
   <Auk::Modal::Footer
